{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1061,
  "lineage": "0ec47714-190d-31a1-e7eb-7109b62221e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "GPI_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-042caa6ab6ce976f3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-042caa6ab6ce976f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1c1d5eeb5978cb5",
            "private_dns": "ip-10-12-3-32.eu-west-3.compute.internal",
            "private_ip": "10.12.3.32",
            "public_dns": "ec2-35-180-127-63.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.127.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ffe5c8e0d88851f8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0083fa700644be3a8",
            "tags": {
              "Name": "GPI-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da62884fc493d4e0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.GATE_OL_SG",
            "aws_subnet.GPI1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "GPI_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c757228751c5335",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-04917466556b8bb15",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-04917466556b8bb15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035673da6426c1beb",
            "private_dns": "ip-10-12-3-201.eu-west-3.compute.internal",
            "private_ip": "10.12.3.201",
            "public_dns": "ec2-15-236-210-123.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.210.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0728d6012057b1561",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06529a9c40b3b9eeb",
            "tags": {
              "Name": "GPI-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da62884fc493d4e0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.GATE_OL_SG",
            "aws_subnet.GPI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INST_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-00008366340d61f75",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-00008366340d61f75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02754e2b9aabc6987",
            "private_dns": "ip-10-12-2-61.eu-west-3.compute.internal",
            "private_ip": "10.12.2.61",
            "public_dns": "ec2-35-181-57-154.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.57.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08908e93d03b718c4",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0344fea08de31b558",
            "tags": {
              "Name": "INST-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c9da9e5c076ff2a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.PAYOL_SG",
            "aws_subnet.INST1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INST_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c757228751c5335",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-0e181de9c7311d0d1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-0e181de9c7311d0d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e3befb9fab87933",
            "private_dns": "ip-10-12-2-138.eu-west-3.compute.internal",
            "private_ip": "10.12.2.138",
            "public_dns": "ec2-15-236-179-105.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.179.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00486fb46a918de23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6441fb5141e94bb",
            "tags": {
              "Name": "INST-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c9da9e5c076ff2a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.PAYOL_SG",
            "aws_subnet.INST2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ISO_server_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-0ed152efb471a8ed7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-0ed152efb471a8ed7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01748619d034f07ef",
            "private_dns": "ip-10-12-1-70.eu-west-3.compute.internal",
            "private_ip": "10.12.1.70",
            "public_dns": "ec2-35-180-232-20.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.232.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-049ba2543c47ec056",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b77c315cbe4ac6d9",
            "tags": {
              "Name": "ISO-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c9da9e5c076ff2a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.PAYOL_SG",
            "aws_subnet.ISO1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ISO_server_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c757228751c5335",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-079488da2f1b25221",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-079488da2f1b25221",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc725e9a6771d00f",
            "private_dns": "ip-10-12-1-194.eu-west-3.compute.internal",
            "private_ip": "10.12.1.194",
            "public_dns": "ec2-35-180-50-150.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.50.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05db3423a0e516473",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096e4664108c86d44",
            "tags": {
              "Name": "ISO-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c9da9e5c076ff2a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.PAYOL_SG",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRI_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f9a552e55285f32",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-011e6c97b70f1f4bf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-011e6c97b70f1f4bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0078bb7bde94dc1d8",
            "private_dns": "ip-10-12-0-41.eu-west-3.compute.internal",
            "private_ip": "10.12.0.41",
            "public_dns": "ec2-15-236-142-175.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.142.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01e1b6c07e91275f2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fc1516ff4d7d444",
            "tags": {
              "Name": "PRI-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c9da9e5c076ff2a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.PAYOL_SG",
            "aws_subnet.PRI1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRI_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c757228751c5335",
            "arn": "arn:aws:ec2:eu-west-3:724852356535:instance/i-024558fc55c83cc56",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAYOL-INSTANCE-PROFILE",
            "id": "i-024558fc55c83cc56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "APP-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00dbb970b06f71cb9",
            "private_dns": "ip-10-12-0-200.eu-west-3.compute.internal",
            "private_ip": "10.12.0.200",
            "public_dns": "ec2-15-188-89-52.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.89.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-062e0fa523c808162",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b96e968e40d16ca",
            "tags": {
              "Name": "PRI-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c9da9e5c076ff2a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "aws_iam_role.app_iam_role",
            "aws_key_pair.generated_key",
            "aws_security_group.PAYOL_SG",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC",
            "tls_private_key.app_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PAYOL_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e4f9a0f3b0d7a502",
            "owner_id": "724852356535",
            "tags": {
              "Name": "PAYOL-IGW"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "GPI_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/GPI-ALB/30f7ea8a3fadf0eb",
            "arn_suffix": "app/GPI-ALB/30f7ea8a3fadf0eb",
            "dns_name": "internal-GPI-ALB-1460490086.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/GPI-ALB/30f7ea8a3fadf0eb",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "GPI-ALB",
            "security_groups": [
              "sg-04eb1c11e980dcb07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0083fa700644be3a8"
              },
              {
                "subnet_id": "subnet-06529a9c40b3b9eeb"
              }
            ],
            "subnets": [
              "subnet-0083fa700644be3a8",
              "subnet-06529a9c40b3b9eeb"
            ],
            "tags": {
              "Name": "GPI-ALB"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.GPI_ALB_SG",
            "aws_subnet.GPI1_PRIVATE_SUBNET",
            "aws_subnet.GPI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "INST_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/INST-ALB/b5620b8095b76273",
            "arn_suffix": "app/INST-ALB/b5620b8095b76273",
            "dns_name": "internal-INST-ALB-2139717545.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/INST-ALB/b5620b8095b76273",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "INST-ALB",
            "security_groups": [
              "sg-009ccd35d4c8da20e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0344fea08de31b558"
              },
              {
                "subnet_id": "subnet-0a6441fb5141e94bb"
              }
            ],
            "subnets": [
              "subnet-0344fea08de31b558",
              "subnet-0a6441fb5141e94bb"
            ],
            "tags": {
              "Name": "INST-ALB"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.INST_ALB_SG",
            "aws_subnet.INST1_PRIVATE_SUBNET",
            "aws_subnet.INST2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ISO_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/ISO-ALB/15e49903705a8edd",
            "arn_suffix": "app/ISO-ALB/15e49903705a8edd",
            "dns_name": "internal-ISO-ALB-1717407868.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/ISO-ALB/15e49903705a8edd",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ISO-ALB",
            "security_groups": [
              "sg-021ea2a3a9d582017"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-096e4664108c86d44"
              },
              {
                "subnet_id": "subnet-0b77c315cbe4ac6d9"
              }
            ],
            "subnets": [
              "subnet-096e4664108c86d44",
              "subnet-0b77c315cbe4ac6d9"
            ],
            "tags": {
              "Name": "ISO-ALB"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.ISO_ALB_SG",
            "aws_subnet.ISO1_PRIVATE_SUBNET",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "PRI_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/PRI-ALB/65c04bc310f43649",
            "arn_suffix": "app/PRI-ALB/65c04bc310f43649",
            "dns_name": "internal-PRI-ALB-2044989835.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/PRI-ALB/65c04bc310f43649",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PRI-ALB",
            "security_groups": [
              "sg-0ea726647f06f72a7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b96e968e40d16ca"
              },
              {
                "subnet_id": "subnet-07fc1516ff4d7d444"
              }
            ],
            "subnets": [
              "subnet-04b96e968e40d16ca",
              "subnet-07fc1516ff4d7d444"
            ],
            "tags": {
              "Name": "PRI-ALB"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.PRI_ALB_SG",
            "aws_subnet.PRI1_PRIVATE_SUBNET",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "GPI_http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/GPI-ALB/30f7ea8a3fadf0eb/1c0fb949535ede10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/GPI-LB-TG/2aae65d4609d13d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/GPI-ALB/30f7ea8a3fadf0eb/1c0fb949535ede10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/GPI-ALB/30f7ea8a3fadf0eb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.GPI_alb",
            "aws_lb_target_group.GPI_TG",
            "aws_security_group.GPI_ALB_SG",
            "aws_subnet.GPI1_PRIVATE_SUBNET",
            "aws_subnet.GPI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "INST_http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/INST-ALB/b5620b8095b76273/ce42b36247790dc8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/INST-LB-TG/cdcd7d1cc588567e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/INST-ALB/b5620b8095b76273/ce42b36247790dc8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/INST-ALB/b5620b8095b76273",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.INST_alb",
            "aws_lb_target_group.INST_TG",
            "aws_security_group.INST_ALB_SG",
            "aws_subnet.INST1_PRIVATE_SUBNET",
            "aws_subnet.INST2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ISO_http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/ISO-ALB/15e49903705a8edd/e3ee117c592a4367",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/ISO-LB-TG/13123d1eddaafec3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/ISO-ALB/15e49903705a8edd/e3ee117c592a4367",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/ISO-ALB/15e49903705a8edd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.ISO_alb",
            "aws_lb_target_group.ISO_TG",
            "aws_security_group.ISO_ALB_SG",
            "aws_subnet.ISO1_PRIVATE_SUBNET",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "PRI_http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/PRI-ALB/65c04bc310f43649/4c3b1d0bc71f331a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/PRI-LB-TG/c001389cd40b48b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:listener/app/PRI-ALB/65c04bc310f43649/4c3b1d0bc71f331a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:loadbalancer/app/PRI-ALB/65c04bc310f43649",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.PRI_alb",
            "aws_lb_target_group.PRI_TG",
            "aws_security_group.PRI_ALB_SG",
            "aws_subnet.PRI1_PRIVATE_SUBNET",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "GPI_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/GPI-LB-TG/2aae65d4609d13d3",
            "arn_suffix": "targetgroup/GPI-LB-TG/2aae65d4609d13d3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/GPI-LB-TG/2aae65d4609d13d3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "GPI-LB-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "GPI-LB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "INST_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/INST-LB-TG/cdcd7d1cc588567e",
            "arn_suffix": "targetgroup/INST-LB-TG/cdcd7d1cc588567e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/INST-LB-TG/cdcd7d1cc588567e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "INST-LB-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "INST-LB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ISO_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/ISO-LB-TG/13123d1eddaafec3",
            "arn_suffix": "targetgroup/ISO-LB-TG/13123d1eddaafec3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/ISO-LB-TG/13123d1eddaafec3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ISO-LB-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ISO-LB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "PRI_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/PRI-LB-TG/c001389cd40b48b3",
            "arn_suffix": "targetgroup/PRI-LB-TG/c001389cd40b48b3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:724852356535:targetgroup/PRI-LB-TG/c001389cd40b48b3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PRI-LB-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "PRI-LB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "PRIV_1_NACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 32005,
                "to_port": 0
              }
            ],
            "id": "acl-07884d76e27e52045",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 204,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 23,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 23
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 202,
                "to_port": 3389
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 201,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "88.22.118.201/32",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 203,
                "to_port": 0
              }
            ],
            "owner_id": "724852356535",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0083fa700644be3a8",
              "subnet-0344fea08de31b558",
              "subnet-04b96e968e40d16ca",
              "subnet-06529a9c40b3b9eeb",
              "subnet-07fc1516ff4d7d444",
              "subnet-096e4664108c86d44",
              "subnet-0a6441fb5141e94bb",
              "subnet-0b77c315cbe4ac6d9"
            ],
            "tags": {
              "Name": "OL-NACL"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_subnet.GPI1_PRIVATE_SUBNET",
            "aws_subnet.GPI2_PRIVATE_SUBNET",
            "aws_subnet.INST1_PRIVATE_SUBNET",
            "aws_subnet.INST2_PRIVATE_SUBNET",
            "aws_subnet.ISO1_PRIVATE_SUBNET",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_subnet.PRI1_PRIVATE_SUBNET",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "GPI1_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030d4937e7f24badc",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GPI1-PRIVATE-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "GPI2_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-082652cbdbad7dc4c",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GPI2-PRIVATE-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "INST1_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e0e28f628ed87a5",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INST1-PUBLIC-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "INST2_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cc65ab51b723141a",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INST2-PRIVATE-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ISO1_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0280dfea767c3a370",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ISO1-PUBLIC-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ISO2_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04521d45476aece9b",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ISO2-PRIVATE-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRI1_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06c4569c1c7c2e012",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRI1-PRIVATE-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRI2_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010e57ff269c8f48d",
            "owner_id": "724852356535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f9a0f3b0d7a502",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRI2-PRIVATE-RT"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "GPI1_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014bf6fcb01b746c6",
            "route_table_id": "rtb-030d4937e7f24badc",
            "subnet_id": "subnet-0083fa700644be3a8"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.GPI1_PRIVATE_ROUTE",
            "aws_subnet.GPI1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "GPI2_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aca5c2dadac0dd8f",
            "route_table_id": "rtb-082652cbdbad7dc4c",
            "subnet_id": "subnet-06529a9c40b3b9eeb"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.GPI2_PRIVATE_ROUTE",
            "aws_subnet.GPI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INST1_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020dd3e52d5a44741",
            "route_table_id": "rtb-01e0e28f628ed87a5",
            "subnet_id": "subnet-0344fea08de31b558"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.INST1_PRIVATE_ROUTE",
            "aws_subnet.INST1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INST2_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c019fb1dce9d914",
            "route_table_id": "rtb-0cc65ab51b723141a",
            "subnet_id": "subnet-0a6441fb5141e94bb"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.INST2_PRIVATE_ROUTE",
            "aws_subnet.INST2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ISO1_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00578d4a62b212e3c",
            "route_table_id": "rtb-0280dfea767c3a370",
            "subnet_id": "subnet-0b77c315cbe4ac6d9"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.ISO1_PRIVATE_ROUTE",
            "aws_subnet.ISO1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ISO2_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e6822642833e0f2",
            "route_table_id": "rtb-04521d45476aece9b",
            "subnet_id": "subnet-096e4664108c86d44"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.ISO2_PRIVATE_ROUTE",
            "aws_subnet.ISO2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI1_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0513be67e25285dad",
            "route_table_id": "rtb-06c4569c1c7c2e012",
            "subnet_id": "subnet-07fc1516ff4d7d444"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.PRI1_PRIVATE_ROUTE",
            "aws_subnet.PRI1_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRI2_PRIVATE_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050e923fdc7228bc0",
            "route_table_id": "rtb-010e57ff269c8f48d",
            "subnet_id": "subnet-04b96e968e40d16ca"
          },
          "dependencies": [
            "aws_internet_gateway.PAYOL_IGW",
            "aws_route_table.PRI2_PRIVATE_ROUTE",
            "aws_subnet.PRI2_PRIVATE_SUBNET",
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GATE_OL_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-0da62884fc493d4e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da62884fc493d4e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "GATE-SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GATE-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GPI_ALB_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-04eb1c11e980dcb07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04eb1c11e980dcb07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "GPI_ALB_SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GPI-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INST_ALB_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-009ccd35d4c8da20e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009ccd35d4c8da20e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "INST_ALB_SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ISO-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ISO_ALB_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-021ea2a3a9d582017",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021ea2a3a9d582017",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ISO_ALB_SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ISO-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PAYOL_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-01c9da9e5c076ff2a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c9da9e5c076ff2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200531160352334900000002",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DIF-EFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRI_ALB_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:security-group/sg-0ea726647f06f72a7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea726647f06f72a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "PRI_ALB_SG",
            "name_prefix": null,
            "owner_id": "724852356535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PRI-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "GPI1_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-0083fa700644be3a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.3.0/25",
            "id": "subnet-0083fa700644be3a8",
            "map_public_ip_on_launch": true,
            "owner_id": "724852356535",
            "tags": {
              "Name": "GPI1-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "GPI2_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-06529a9c40b3b9eeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.12.3.128/25",
            "id": "subnet-06529a9c40b3b9eeb",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "GPI2-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INST1_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-0344fea08de31b558",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.2.0/25",
            "id": "subnet-0344fea08de31b558",
            "map_public_ip_on_launch": true,
            "owner_id": "724852356535",
            "tags": {
              "Name": "INST1-PUB-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INST2_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-0a6441fb5141e94bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.12.2.128/25",
            "id": "subnet-0a6441fb5141e94bb",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "INST2-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ISO1_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-0b77c315cbe4ac6d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.1.0/25",
            "id": "subnet-0b77c315cbe4ac6d9",
            "map_public_ip_on_launch": true,
            "owner_id": "724852356535",
            "tags": {
              "Name": "ISO1-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ISO2_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-096e4664108c86d44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.12.1.128/25",
            "id": "subnet-096e4664108c86d44",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "ISO2-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI1_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-07fc1516ff4d7d444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.12.0.0/25",
            "id": "subnet-07fc1516ff4d7d444",
            "map_public_ip_on_launch": true,
            "owner_id": "724852356535",
            "tags": {
              "Name": "PRI1-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRI2_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:subnet/subnet-04b96e968e40d16ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.12.0.128/25",
            "id": "subnet-04b96e968e40d16ca",
            "map_public_ip_on_launch": false,
            "owner_id": "724852356535",
            "tags": {
              "Name": "PRI2-PRIV-SUBNET-AZ"
            },
            "vpc_id": "vpc-093ed5eaf4fb687f5"
          },
          "dependencies": [
            "aws_vpc.PAYOL_1_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PAYOL_1_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:724852356535:vpc/vpc-093ed5eaf4fb687f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-027c12707d4f0d6f9",
            "default_route_table_id": "rtb-0040b4632184210ba",
            "default_security_group_id": "sg-090936f70ea2dda37",
            "dhcp_options_id": "dopt-06938eb8310b77230",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-093ed5eaf4fb687f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0040b4632184210ba",
            "owner_id": "724852356535",
            "tags": {
              "Name": "PAYOL-1-VPC"
            }
          }
        }
      ]
    }
  ]
}